--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         - "80:80"
       volumes:
         - ./web/app/main.py:/app/main.py
+        - /location/of/google/conf/file:/conf/keyfile.json
       environment:
           MONGODB_HOST: mongo
           MONGODB_PORT: 27017
